# cmake-templates

./: .gitmodules  README.md
2_CMake/HelloWorld/: CMakeLists.txt  Makefile  README.md  conanfile.txt
2_CMake/HelloWorld/app/: CMakeLists.txt  main.cpp
2_CMake/HelloWorld/cmake/: AddGitSubmodule.cmake
2_CMake/HelloWorld/config/: config.hpp.in
2_CMake/HelloWorld/src/my_lib/: CMakeLists.txt  my_lib.cpp  my_lib.h
2_CMake/HelloWorld/tests/: CMakeLists.txt  main.cpp
